fixed readability

--- a/cafe/css/camera.css
+++ b/cafe/css/camera.css
@@ -34,10 +34,10 @@
 }
 .camera_wrap {
   display: none;
-  position: absolute;
+  position: center;
   left: 0;
   top: 0;
-  width: 100%;
+  width: 80%;
   margin-bottom: 0 !important;
   height: 100%;
   background: #fff;
